--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>王汝维</title>
+	<title>居鸿培</title>
 	<link rel="stylesheet" href="css/main.css" />
 	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 	<script src="js/main.js"></script>
@@ -22,7 +22,7 @@
 		<div class="face">
 			<img src="img/my.png" />
 		</div>
-		<h1><p><span>王</span><span>汝</span><span>维</span><span> </span><span> </span><span> </span>W<span></span>E<span></span>B<span></span><span>前</span><span>端</span><span>工</span><span>程</span><span>师</span></p></h1>
+		<h1><p><span>居</span><span>鸿</span><span>培</span><span> </span><span> </span><span> </span>W<span></span>E<span></span>B<span></span><span>前</span><span>端</span><span>工</span><span>程</span><span>师</span></p></h1>
 		<div class="me-btn left">
 			<a href="credit.html">转到个人信息页</a>
 			<span class="bar top"></span>
@@ -111,9 +111,9 @@
 	</section>
 	<section class="others">
 		<h2>Please contact me</h2>
-		<h3>TEL: 18600364243</h3>
-		<h3>QQ: 517194406</h3>
-		<h3>WECHAT: 18600364243</h3>
+		<h3>TEL: 13616278934</h3>
+		<h3>QQ: 673815630</h3>
+		<h3>WECHAT: 13616278934</h3>
 	</section>
 </body>
 </html>
