--- a/credit.html
+++ b/credit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>王汝维</title>
+	<title>居鸿培</title>
 	<link rel="stylesheet" href="css/credit.css" />
 	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 	<script src="js/common.js"></script>
@@ -27,38 +27,26 @@
 			</div>
 			<div class="info">
 				<div class="hello">HELLO</div>
-				<h1 class="name"><span>I'm</span> 王汝维</h1>
+				<h1 class="name"><span>I'm</span> 居鸿培</h1>
 				<h2 class="job">Web前端开发工程师</h2>
 				<dl class="profile clearfix">
 					<dt>年龄</dt>
 					<dd>24</dd>
 					<dt>地址</dt>
-					<dd>北京市朝阳区亚运村</dd>
+					<dd>上海市徐汇区华滨家园</dd>
 					<dt>E-mail</dt>
-					<dd><a href="wrw567@126.com">wrw567@126.com</a></dd>
+					<dd><a href="wrw567@126.com">673815630@qq.com</a></dd>
 					<dt>Tel</dt>
-					<dd><a href="tel:+12562548456">18600364243</a></dd>
+					<dd><a href="tel:+12562548456">13616278934</a></dd>
 					<dt>工作年限</dt>
 					<dd>2年</dd>
 					<dt class="profile-vacation"><span>到岗时间</span></dt>
 					<dd><i class="iconfont">&#xf0011;</i>可随时到岗</dd>
 				</dl>
 			</div>
-			<div class="social-bar">
-				<ul class="social clearfix">
-					<li><a target="_blank" href="https://plus.google.com/u/0/"><i class="google iconfont">&#xe609;</i></a></li>
-					<li><a target="_blank" href="http://sighttp.qq.com/msgrd?v=1&uin=517194406"><i class="qq iconfont">&#xe601;</i></a></li>
-					<li><a target="_blank" href="javascript:;" title="18600364243"><i class="wechat iconfont">&#xe604;</i></a></li>
-					<li><a target="_blank" href="http://weibo.com/2730287783/profile?rightmod=1&wvr=6&mod=personinfo&is_all=1"><i class="weibo iconfont">&#xe600;</i></a></li>
-					<li><a target="_blank" href="wangruwei.github.com"><i class="github iconfont">&#xe607;</i></a></li>
-				</ul>
-			</div>
 		</div>
 		<div class="profile-text animate-up objs">
-			<p>Hello! 我叫王汝维，是一名web前端开发工程师，我的爱好是数码产品，网络技术，上学时候就爱利用业余时间研究coding，这个爱好也是坚持到了现在，入行前端行业也让我感到很享受，我享受编程带给我的成就感，享受逻辑思考的过程，目前离岗在家，可随时到岗就业，请联系我。</p>
-		</div>
-		<div class="profile-btn animate-up objs">
-			<a href="http://101.200.84.145/resume.doc">下载简历</a>
+			<p>Hello! 我叫居鸿培，是一名web前端开发工程师，我的爱好是数码产品，网络技术，上学时候就爱利用业余时间研究coding，这个爱好也是坚持到了现在，入行前端行业也让我感到很享受，我享受编程带给我的成就感，享受逻辑思考的过程，目前离岗在家，可随时到岗就业，请联系我。</p>
 		</div>
 	</section>
 	<section class="skills animate-up objs">
@@ -194,9 +182,9 @@
 				<span class="dot"></span>
 				<div class="timeline-box-inner">
 					<span class="arrow"><i></i></span>
-					<div class="date">2009 - 2013</div>
+					<div class="date">2010 - 2014</div>
 					<h3>全日制大学本科</h3>
-					<h4>北方工业大学</h4>
+					<h4>湖南工业大学</h4>
 				</div>
 			</div>
 			<div class="timeline-box right animate-left objs" style="right:0;top:70px;">
@@ -243,23 +231,20 @@
 			<h3>Feel free to contact me</h3>
 			<dl class="clearfix">
 				<dt>姓名<i></i></dt>
-				<dd>王汝维</dd>
+				<dd>居鸿培</dd>
 				<dt>性别<i></i></dt>
 				<dd>男</dd>
 				<dt>出生日期<i></i></dt>
-				<dd>1991</dd>
+				<dd>1992</dd>
 				<dt>地址<i></i></dt>
-				<dd>北京市朝阳区亚运村</dd>
+				<dd>上海市华滨家园</dd>
 				<dt>工作年限<i></i></dt>
 				<dd>2年</dd>
 				<dt>E-MAIL<i></i></dt>
-				<dd>wrw567@126.com</dd>
+				<dd>673815630@qq.com</dd>
 				<dt>TEL<i></i></dt>
-				<dd>18600364243</dd>
+				<dd>13616278934</dd>
 			</dl>
-		</div>
-		<div class="loca">
-			<img src="img/map.jpg" width="455" height="488" title="由于地图API受控于HTTPS限制，所以取消引入"/>
 		</div>
 	</section>
 </body>
