--- a/myworks-h5.html
+++ b/myworks-h5.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>王汝维</title>
+	<title>居鸿培</title>
 	<link href="favicon.ico" rel="icon" type="image/x-icon" />
 	<link rel="stylesheet" href="css/myworks.css" />
 	<script src="js/common.js"></script>
